fix dark mode completer contrast

--- a/style/dark.css
+++ b/style/dark.css
@@ -48,7 +48,7 @@
 }
 
 body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
-  background-color: var(--gt-black);
+  background-color: var(--jp-layout-color0);
 }
 
 /* tabs */
@@ -76,7 +76,7 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   button.jp-mod-styled.jp-mod-accept:active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
 }
 
 /* menu */
@@ -87,14 +87,14 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   .lm-MenuBar-item.lm-mod-active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
 }
 
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
   .lm-MenuBar.lm-mod-active
   .lm-MenuBar-item.lm-mod-active {
   background-color: var(--jp-brand-color1);
-  color: var(--gt-black);
+  color: var(--jp-layout-color0);
   border-color: transparent;
 }
 
@@ -110,4 +110,11 @@ body[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] {
   .jp-InputArea-editor,
 [data-jp-theme-name*='GT COAR'][data-jp-theme-light='false'] .jp-InputArea-editor {
   border: 0;
+}
+
+/* completer */
+[data-jp-theme-name*='GT COAR'][data-jp-theme-light='false']
+  .jp-Completer-item.jp-mod-active {
+  color: var(--jp-layout-color0);
+  font-weight: 700;
 }
